--- a/problems/79.word-search-en.md
+++ b/problems/79.word-search-en.md
@@ -120,9 +120,8 @@ Found match with word, return `True`.
 ```java
 public class LC79WordSearch {
   public boolean exist(char[][] board, String word) {
-    if (board == null || word == null) return false;
-    if (word.length() == 0) return true;
-    if(board.lenght == 0) return false;
+    if (board == null || board.length == 0 || board[0].length == 0
+        || word == null || word.length() == 0) return true;
     int rows = board.length;
     int cols = board[0].length;
     for (int r = 0; r < rows; r++) {
